user repository and pom.xml updated